[package]
name = "winkel"
version = "0.1.0"
authors = ["Ian Rehwinkel <ian.rehwinkel@tutanota.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[test]]
name = "gltests"
path = "gltests/main.rs"
harness = false

[dependencies]
gl = "0.14.0"

[dev-dependencies]
glutin = "0.24.0"